--- a/.github/workflows/TS-Playlist.yml
+++ b/.github/workflows/TS-Playlist.yml
@@ -45,9 +45,9 @@ jobs:
             gh auth login --with-token < mytoken.txt
             mkdir git-repo/
             cd git-repo/
-            touch mytatasky.m3u
-            echo "Initial Test" >> mytatasky.m3u
-            gh gist create mytatasky.m3u | tee gist_link.txt
+            touch allChannelPlaylist.m3u
+            echo "Initial Test" >> allChannelPlaylist.m3u
+            gh gist create allChannelPlaylist.m3u | tee gist_link.txt
             sed -i 's/gist/${{ github.event.inputs.git_token }}@gist/g' gist_link.txt
             gist_url=$(cat gist_link.txt)
             dir="${gist_url##*/}"
